[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scene/CharDeath.gd" type="Script" id=2]
[ext_resource path="res://assets/img/character/player/Raka2.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 2688, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 2752, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 2816, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 2880, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 2944, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 3008, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 3136, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": false,
"name": "player_death",
"speed": 5.0
} ]

[node name="Death" type="Node2D"]
z_index = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 3
frames = SubResource( 20 )
animation = "player_death"
frame = 7
playing = true

[node name="DeathLife" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DeathLife" to="." method="_on_DeathLife_timeout"]
